--- a/2_CNN_Projects_Smile_detection_&_hand_signs_recognition_with_tensorflow_Keras.ipynb
+++ b/2_CNN_Projects_Smile_detection_&_hand_signs_recognition_with_tensorflow_Keras.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMFaKE179vA8EMi6Npo7psp",
+      "authorship_tag": "ABX9TyPYOC+xtprVqu3acIu3HyE4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# CNN Applications\n"
+        "# CNN Applications with Keras/TF\n",
+        "\n",
+        "# 2 Classification Projects: \n",
+        "- **Smile recognition**= Binary classification\n",
+        "- **Numbers shown by hand recognition (from 0 to 5)** = Multi-class classification\n"
       ],
       "metadata": {
         "id": "EVo0JsGfmpDo"
@@ -41,7 +45,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Tensorflow a is programming framewor from Google. \n",
+        "A note about Tensorflow : TF a is programming framework from Google. \n",
         "\n",
         "I used this ressource for this work : A tutorial from Coursera, DeepLearning Specialization (Andrew NG), Deeplearningai"
       ],
@@ -1281,9 +1285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mDwYs-C4QI1Z",
-        "outputId": "0020db5a-0485-42ad-ea7d-0c83335b6396"
+        "outputId": "ab3807ae-c941-45f5-e42f-f4d24c0f4066"
       },
-      "execution_count": 51,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1692,7 +1696,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 66
         }
       ]
     },
