--- a/2_CNN_Projects_Smile_detection_&_hand_signs_recognition_with_tensorflow_Keras.ipynb
+++ b/2_CNN_Projects_Smile_detection_&_hand_signs_recognition_with_tensorflow_Keras.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPYOC+xtprVqu3acIu3HyE4",
+      "authorship_tag": "ABX9TyNjtwOi+4b45FNziEjeFhgq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -90,7 +90,7 @@
         "id": "8u9evAPJnb8A",
         "outputId": "38d1572f-8f9a-48aa-ac45-d854f14540f8"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "5MHKYSLOk9sn"
       },
@@ -287,18 +287,21 @@
         "\n",
         "Sequential model : \n",
         "\n",
-        "    A Sequential model is appropriate for a plain stack of layers where each layer has exactly one input tensor and one output tensor. Sequential API requires the model to move in a linear fashion through its layers.\n",
+        "- A Sequential model is appropriate for a plain stack of layers where each layer has exactly one input tensor and one output tensor. Sequential API requires the model to move in a linear fashion through its layers.\n",
+        "\n",
+        "- **Model layer-by-layer. It is very simple and easy to use. But sharing of layers or branching of layers is not allowed. Also, you can NOT have multiple inputs or outputs.**\n",
         "\n",
         "Functional API : \n",
         "\n",
-        "    The Functional API can handle models with non-linear topology, shared layers, as well as layers with multiple inputs or outputs => allows much more flexibility\n",
+        "- The Functional API can handle models with non-linear topology, shared layers, as well as layers with multiple inputs or outputs => allows much more flexibility\n",
         "\n",
-        "    The Keras functional API is a way to create models that are more flexible than the tf.keras.Sequential API.\n",
+        "- The Keras functional API is a way to create models that are more flexible than the tf.keras.Sequential API.\n",
         "\n",
-        "    The functional API can handle models with non-linear topology, shared layers, and even multiple inputs or outputs.\n",
+        "- The functional API can handle models with non-linear topology, shared layers, and even multiple inputs or outputs.\n",
         "\n",
-        "    The main idea is that a deep learning model is usually a directed acyclic graph (DAG) of layers. So the functional API is a way to build graphs of layers.\n",
-        "\n"
+        "- The main idea is that a deep learning model is usually a directed acyclic graph (DAG) of layers. So the functional API is a way to build graphs of layers.\n",
+        "\n",
+        "- **Branching or sharing of layers is allowed. Can have multiple inputs and outputs**.\n"
       ],
       "metadata": {
         "id": "xcTy2oRRSKka"
@@ -362,7 +365,7 @@
         "id": "Mkj5_JcKlt-T",
         "outputId": "1668baa5-1218-4a9b-9e31-9760612c2546"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -391,7 +394,7 @@
         "id": "8W533w1E20te",
         "outputId": "d961975c-ee7b-43ee-c51d-331327c5316a"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -424,7 +427,7 @@
         "id": "p0THM5_NolCU",
         "outputId": "7c27440e-c893-4a22-bc65-1e858bd0c485"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -529,7 +532,7 @@
       "metadata": {
         "id": "TVMHwJoArf--"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -554,7 +557,7 @@
       "metadata": {
         "id": "kBpNn0pl1hc1"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -579,7 +582,7 @@
         "id": "1_W1EAFmxkTM",
         "outputId": "bc1ca6d7-95a5-4ca6-e334-7d765ba9a02a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,7 +639,7 @@
         "id": "sHBZevcv16rd",
         "outputId": "990da98c-7fea-49a1-9e87-22aced09f4ac"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +692,7 @@
         "id": "TT7v0Ybl3Pyv",
         "outputId": "c1fc3c69-6fee-411d-ee34-925c87fbacf9"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -758,7 +761,7 @@
       "metadata": {
         "id": "maKxA20D5J8B"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -777,7 +780,7 @@
         "id": "Yb672FHnCIv6",
         "outputId": "118996fc-b49a-4c20-cfe5-48a349191a5f"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,7 +838,7 @@
         "id": "h0IeVuegCLBh",
         "outputId": "2bb86b27-77f3-447d-fa9f-f41719ff093a"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -971,7 +974,7 @@
       "metadata": {
         "id": "gHPOQJ3TEkLb"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -992,7 +995,7 @@
         "id": "DH5ysaO9OO0o",
         "outputId": "e7ef9396-4c39-41e0-9f0b-43408abb2934"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1054,7 +1057,7 @@
         "id": "LOw0zBz9OQxh",
         "outputId": "afea7114-03f9-4d03-ceaf-73fef488ecbb"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1287,7 +1290,7 @@
         "id": "mDwYs-C4QI1Z",
         "outputId": "ab3807ae-c941-45f5-e42f-f4d24c0f4066"
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1724,7 +1727,7 @@
         "id": "uh9xYcrFRF11",
         "outputId": "fdb9ac77-87e4-41df-8078-4ffcefcce09a"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
